# ipxact2systemverilog

./: .gitattributes  .gitignore  .gitmodules  .prospector.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  circle.yml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml
example/: example.html  example.rst  example_sv_pkg.svh  example_vhd_pkg.vhd
example/input/: default.ini  no_default.ini  sphinx.ini  test.xml  test2.xml
example/output/: example.docx  example.h  example.html  example.md  example.py  example.rst  example.rtf  example2.h  example2.md  example2.rst  example2_sv_pkg.sv  example2_sv_pkg.svh  example2_vhd_pkg.vhd  example_sv_pkg.sv  example_vhd_pkg.vhd
example/output_default/: example.h  example.md  example.py  example.rst  example_sv_pkg.sv  example_vhd_pkg.vhd
example/output_no_default/: example.h  example.md  example.py  example.rst  example_sv_pkg.sv  example_vhd_pkg.vhd
example/output_sphinx/: conf.py  example.rst  index.rst
example/output_sphinx2/: conf.py  example2.rst  index.rst
example/tb/: tb_vhd.vhd
example/test/: example.c
input/: test.xml
ipxact2systemverilog/: cli.py  ipxact2hdlCommon.py  ipxact2pyCommon.py  slang.py  validate.py
ipxact2systemverilog/xml/: autoConfigure.xsd  busInterface.xsd  commonStructures.xsd  component.xsd  configurable.xsd  constraints.xsd  file.xsd  fileType.xsd  generator.xsd  identifier.xsd  memoryMap.xsd  model.xsd  port.xsd  signalDrivers.xsd  simpleTypes.xsd  subInstances.xsd
output/: example.html  example.rst  example_sv_pkg.sv  example_vhd_pkg.vhd
tb/: sv_dut.sv  tb.sv  vhd_dut.vhd
tools/osx/: slang-depmap
