[project]
description = "Generate VHDL, SystemVerilog, html, rst, md, pdf, c headers from an IPXACT description"
readme = "README.md"
version = "1.0.23"
name = "ipxact2systemverilog"
authors = [
  {name = "oddball"},
]
keywords = ["ipxact2systemverilog", "ipxact2vhdl", "VHDL", "SystemVerilog", "html", "rst", "md", "pdf", "IPXACT"]
requires-python = ">= 3"
dependencies = [
  "docutils",
  "lxml",
  "mdutils",
  "restructuredtext-lint",
  "sphinx",
  "sphinxcontrib-wavedrom",
  "rstcloth",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Embedded Systems",
  "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/oddball/ipxact2systemverilog"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# To include Git sub modules
ipxact2systemverilog = [
    "xml/**/*.xsd",
    "xml/**/README.md",
    "xml/**/LICENSE.md", 
]