[project]
description = "Generate VHDL, SystemVerilog, html, rst, md, pdf, c headers from an IPXACT description"
readme = "README.md"
version = "1.0.24"
name = "ipxact2systemverilog"
authors = [
  {name = "oddball"},
]
keywords = ["ipxact2systemverilog", "ipxact2vhdl", "VHDL", "SystemVerilog", "html", "rst", "md", "pdf", "IPXACT"]
requires-python = ">= 3"
dependencies = [
  "build",
  "docutils",
  "lxml",
  "mdutils",
  "restructuredtext-lint",
  "sphinx",
  "sphinxcontrib-wavedrom",
  "rstcloth",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Embedded Systems",
  "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipxact2systemverilog"]

[project.scripts]
ipxact2c = "ipxact2systemverilog.cli:main_c"
ipxact2md = "ipxact2systemverilog.cli:main_md"
ipxact2rst = "ipxact2systemverilog.cli:main_rst"
ipxact2systemverilog = "ipxact2systemverilog.cli:main_systemverilog"
ipxact2vhdl = "ipxact2systemverilog.cli:main_vhdl"


[project.urls]
Repository = "https://github.com/oddball/ipxact2systemverilog"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# To include Git sub modules
ipxact2systemverilog = [
    "xml/**/*.xsd",
    "xml/**/README.md",
    "xml/**/LICENSE.md", 
]
